--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,7 +50,7 @@
   }
 
   [data-theme='dark'] {
-    --background: 0 0% 0%;
+    --background: #023047;
     --foreground: 210 40% 98%;
 
     --card: 0 0% 4%;
