--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,7 +100,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-paragraph min-h-[100vh] flex flex-col;
+    @apply bg-background text-paragraphDark min-h-[100vh] flex flex-col;
   }
 }
 
